hotfix: 팝업 스타일 변경

--- a/client/src/components/molecules/Menu/index.module.scss
+++ b/client/src/components/molecules/Menu/index.module.scss
@@ -16,8 +16,7 @@
   }
 
   li:nth-child(2n) {
-    background-color: var(--color-gray-light);
-    color: var(--color-white);
+    background-color: #f7f7f7;
   }
 
   li:last-child {
