--- a/client/src/components/molecules/CandidateSection/index.module.scss
+++ b/client/src/components/molecules/CandidateSection/index.module.scss
@@ -1,4 +1,5 @@
 .candidate {
+  position: relative;
   flex: 0 0 100%;
   height: 213px;
   display: flex;
@@ -6,6 +7,23 @@
   justify-content: center;
   background-color: var(--color-white);
   border-radius: 10px;
+
+  .live {
+    &-true {
+      background-color: var(--color-main-pink);
+    }
+  }
+  em {
+    position: absolute;
+    top: 5px;
+    left: 0px;
+    margin-left: 6px;
+    font-size: 10px;
+    border-radius: 6px;
+    padding: 4px 8px;
+    background-color: var(--color-gray-light);
+    color: #fff;
+  }
 
   &-content {
     width: 100%;
