feat : 스트리밍 안할 경우, 로딩 화면 추가

--- a/client/src/pages/Streaming/index.module.scss
+++ b/client/src/pages/Streaming/index.module.scss
@@ -17,3 +17,24 @@
   left: 10px;
   z-index: 10;
 }
+
+.loadingBox{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 250px;
+  gap: 14px;
+
+  > div {
+    min-height: auto;
+  }
+  span {
+    color: #fff;
+    // position: absolute;
+    // left: 50%;
+    // top: 50%;
+    // transform: translate(-50%,-50%);
+  }
+}
